@@ -9,7 +9,7 @@
 		<{$linkload.country}>
 	</div>
 	<div style="margin-left: 5px;">
-		<div style="float:right;"><{$linkload.autothumbsrc}></div>
+		<div style="float:right; padding-left: 5px;"><{$linkload.autothumbsrc}></div>
 		<{$linkload.description}>
 		<br />
 		<div style="clear: both; margin: 5px 0 15px 5px;"><a class="button" href="<{$linkload.link}>"><{$smarty.const._MB_IMLINKS_VIEWDETAILS}></a></div>
